// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should match the snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  Text
</button>
`;

exports[`Button component should render a button only icon state  1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-xsmall___EJee7 {
  line-height: var(--qtm-base-font-size);
  min-height: var(--qtm-spacing-large);
  padding: 0 var(--qtm-spacing-xsmall);
}

.ButtonBase-module__button-small___ffdO7,
.ButtonBase-module__button-xsmall___EJee7 {
  font-size: var(--qtm-font-size-12);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-xsmall___EJee7 ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-xsmall___Iilfe css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 8px; max-width: 8px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-small___ffdO7,
.ButtonBase-module__button-xsmall___EJee7 {
  font-size: var(--qtm-font-size-12);
}

.ButtonBase-module__button-small___ffdO7 {
  line-height: calc(var(--qtm-base-font-size)*.75*1.5);
  min-height: var(--qtm-spacing-xlarge);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-small___ffdO7 ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-small___tdGMn css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 16px; max-width: 16px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  4`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-large___nufS0 {
  font-size: var(--qtm-font-size-20);
  line-height: calc(var(--qtm-base-font-size)*1.75);
  min-height: var(--qtm-spacing-xxxlarge);
}

.ButtonBase-module__button-large___nufS0,
.ButtonBase-module__button-xlarge___rfsxW {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-large___nufS0 ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 32px; max-width: 32px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component should render a button only icon state  5`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-large___nufS0,
.ButtonBase-module__button-xlarge___rfsxW {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-xlarge___rfsxW {
  font-size: var(--qtm-font-size-24);
  line-height: calc(var(--qtm-base-font-size)*2);
  min-height: calc(var(--qtm-spacing-xxxlarge) + var(--qtm-spacing-xsmall));
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-xlarge___rfsxW ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="InfoIcon"
    focusable="false"
    style="font-size: 40px; max-width: 40px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
    />
  </svg>
</button>
`;

exports[`Button component when center prop is set 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__button-center___Ce06a {
  margin-left: auto;
  margin-right: auto;
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-center___Ce06a ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  Text
</button>
`;

exports[`Button component when full prop is set 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__button-full___tbwzg {
  width: 100%;
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__button-full___tbwzg ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  Text
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-neutral___PafPL {
  background-color: var(--qtm-colors-neutral-700);
  border: 2px solid var(--qtm-colors-neutral-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-neutral___PafPL ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-neutral-900___385cv ButtonBase-module__shadow-4-neutral-700___0bwKP ButtonBase-module__shadow-8-neutral-900___-1Nrz"
  type="button"
>
  neutral
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  primary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-success___behjr {
  background-color: var(--qtm-colors-success-700);
  border: 2px solid var(--qtm-colors-success-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-success___behjr ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-success-900___kPjrj ButtonBase-module__shadow-4-success-700___6tbCe ButtonBase-module__shadow-8-success-900___KMKhJ"
  type="button"
>
  success
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 4`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-warning___onIx3 {
  background-color: var(--qtm-colors-warning-700);
  border: 2px solid var(--qtm-colors-warning-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-warning___onIx3 ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-warning-900___ND8BN ButtonBase-module__shadow-4-warning-700___-oztY ButtonBase-module__shadow-8-warning-900___3Qt8Z"
  type="button"
>
  warning
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 5`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-error___xa2XO {
  background-color: var(--qtm-colors-error-700);
  border: 2px solid var(--qtm-colors-error-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-error___xa2XO ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-error-900___X-yBO ButtonBase-module__shadow-4-error-700___HlpDM ButtonBase-module__shadow-8-error-900___tTKQD"
  type="button"
>
  error
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  button
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="reset"
>
  reset
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="submit"
>
  submit
</button>
`;

exports[`Button component with an icon should match secondary snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-with-children___qOB0A {
  margin-right: var(--qtm-spacing-xsmall);
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-with-children___qOB0A ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="SearchIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
    />
  </svg>
  Search
</button>
`;

exports[`Button component with an icon should match secondary snapshot 2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-with-children___qOB0A {
  margin-right: var(--qtm-spacing-xsmall);
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-with-children___qOB0A ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="PaymentIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2m0 14H4v-6h16zm0-10H4V6h16z"
    />
  </svg>
  Payment
</button>
`;

exports[`Button component with an icon should match secondary snapshot 3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-with-children___qOB0A {
  margin-right: var(--qtm-spacing-xsmall);
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-with-children___qOB0A ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="LockIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2m-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2m3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1z"
    />
  </svg>
  Lock
</button>
`;

exports[`Button component with an icon should match secondary snapshot 4`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-with-children___qOB0A {
  margin-right: var(--qtm-spacing-xsmall);
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

<button
  class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-with-children___qOB0A ButtonBase-module__button-icon-medium___HY30Y css-i4bv87-MuiSvgIcon-root"
    data-qtm-preloader="icon"
    data-testid="StarIcon"
    focusable="false"
    style="font-size: 24px; max-width: 24px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
  </svg>
  Star
</button>
`;
